--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Title</title>
+    <title>My Page</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -19,8 +19,6 @@
     </h1>
     <ul>
       <li>Love Yourself</li>
-      <li></li>
-      <li></li>
     </ul>
     <a
       href="https://people.com/politics/barack-obama-says-kamala-harris-is-more-than-prepared/"
